[package]
name = "crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.6.1"
rand = "0.8.4"
base64 = "0.13.0"

[[bin]]
name = "crates"
path = "src/main.rs"

[lib]
name = "crates"
path = "src/lib.rs"

